test/visibility/import/useAndImport-useOnlyNothing2b.good
useAndImport-useOnlyNothing2b.chpl:21: In function 'main':
useAndImport-useOnlyNothing2b.chpl:22: error: 'x' undeclared (first use this function)
